Refactored some exceptions.